# libkcp

./: CMakeLists.txt  README.md  galois_table.c  ikcp.c  ikcp.h  kcp_test.cpp  kcp_test_lite.c  kcp_test_nofec.cpp  kcpserver.go  kcptest.cpp  ktproxy.go  ktpserver.go  qtp_test.c  qtpconnection.c  qtpconnection.h  qtproxy_client.c  sess.cpp  session.cpp  session.h  testit.sh
